--- a/build.dependencies.gradle
+++ b/build.dependencies.gradle
@@ -22,6 +22,6 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.2.0'
     implementation 'org.firstinspires.ftc:gameAssets-PowerPlay:1.0.0'
     implementation 'org.firstinspires.ftc:Vision:8.2.0'
-
+    implementation 'com.github.StateFactory-Dev:StateFactory:0.3.1'
     implementation 'com.acmerobotics.dashboard:dashboard:0.4.10'
 }
